Declarative/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: firefox
  namespace: ndapp
  labels:
    app: firefox
spec:
  containers:
  - name: firefox
    image: linuxserver/firefox:1.2404.1

---

apiVersion: v1
kind: Pod

metadata:
  name: nginx
  namespace: ndapp
  labels:
    app: nginx

spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
    - name: azure-storage
      mountPath: /az-storage
  
  volumes:
  - name: azure-storage
    azureFile:
      secretName: azsecret
      shareName: ndfileshare-20260920


---

apiVersion: v1
kind: Pod

metadata:
  name: nginx-withpvc
  namespace: ndapp
  labels:
    app: nginx

spec:
  containers:
  - name: nginx-withpvc
    image: nginx
    volumeMounts:
    - name: pvc-az
      mountPath: /az-pvc
  
  volumes:
  - name: pvc-az
    persistentVolumeClaim:
      claimName: pvc-az
