Declarative/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
  namespace: dev
spec:
  type: LoadBalancer
  ports:
  - name: port80http
    port: 80
    targetPort: 80
  selector:
    app: dep-nginx
